Fix color media queries on Windows

Fixes <http://webkit.org/b/42973> <rdar://problem/8234072> (color:8)
media query does not evaluate to true for 32bpp displays on Windows

Test: fast/media/color-does-not-include-alpha.html

Reviewed by Darin Adler.

WebCore:

* platform/win/PlatformScreenWin.cpp:
(WebCore::screenDepthPerComponent): Use screenDepth instead of trying
to interpret DEVMODE directly, since screenDepth knows how to correct
for video drivers that return 32 instead of 24.

LayoutTests:

Add test for color:8 media queries

* fast/media/color-does-not-include-alpha-expected.txt: Added.
* fast/media/color-does-not-include-alpha.html: Added.

Canonical link: https://commits.webkit.org/59441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68809 268f45cc-cd09-0410-ab3c-d52691b4dbfc